[package]
name = "Final_Project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
chrono = "0.4"
plotters = "0.3"
statrs = "0.14"